<resources>
    <string name="app_name">AndroidChatApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="addChannel">Add channel</string>
    <string name="please_log_in">Please log in</string>
    <string name="message">message:</string>
    <string name="send_message">Send message</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="button">Button</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="username">Username</string>
    <string name="avatar_image">avatar image</string>
    <string name="choose_background_color">Choose background color</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="remove_background_color">remove background color ?</string>
</resources>
