<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.SignupActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="text|textPersonName"
            android:ems="10"
            android:id="@+id/signupUsernameField" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/username" android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
            android:autofillHints="" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signupEmailField" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signupUsernameField" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/email"
            android:layout_marginEnd="32dp" android:layout_marginStart="32dp" android:autofillHints=""
            tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signupPasswordField" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signupEmailField" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:hint="@string/password" android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
            android:autofillHints="" tools:targetApi="o"/>
    <TextView
            android:text="@string/tap_to_generate_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/signupPasswordField" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/chooseAvatarImage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onChooseAvatarClicked" android:contentDescription="@string/avatar_image"/>
    <Button
            android:text="@string/choose_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/generateBgColorBtn" android:textColor="@color/colorThird"
            android:background="@color/colorSecondary" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/chooseAvatarImage" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp"
            android:onClick="onGenerateBgColorClicked"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signupUserBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:textColor="@color/colorThird"
            android:background="@color/colorSecondary" android:onClick="onSignupUserClicked"/>
    <TextView
            android:text="@string/remove_background_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/removeBgColorBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/generateBgColorBtn" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
            android:onClick="onRemoveBgColor"/>
</android.support.constraint.ConstraintLayout>