<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="43dp"
            android:ems="10"
            android:id="@+id/loginEmailText" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/email" android:autofillHints=""
            android:inputType="textEmailAddress" tools:targetApi="o"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordLoginText" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/loginEmailText" android:layout_marginStart="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/password" android:autofillHints="" tools:targetApi="o"/>
    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtn" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordLoginText" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:background="@color/colorSecondary"
            android:textColor="@color/colorThird" android:onClick="loginBtnClicked"/>
    <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dontHaveAccountTxt" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="56dp"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn"/>
    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginCreateUserBtn" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/dontHaveAccountTxt"
            android:textColor="@color/colorThird" android:background="@color/colorSecondary"
            android:onClick="loginCreateUserBtnClicked"/>
</android.support.constraint.ConstraintLayout>