<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".Controller.MainActivity">

    <TextView
            android:layout_width="0dp"
            android:layout_height="21dp"
            android:text="@string/please_log_in"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center" android:id="@+id/mainChannelName"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/sendMessageText" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp" android:hint="@string/message"
            android:autofillHints="" tools:targetApi="o"/>
    <ImageButton
            android:layout_width="35dp"
            android:layout_height="35dp" app:srcCompat="@drawable/ic_menu_send"
            android:id="@+id/sendMessageBtn"
            android:tint="@color/colorSecondary" android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@android:color/transparent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/send_message" android:onClick="sendMessageBtnClicked"/>
    <android.support.v7.widget.RecyclerView
            android:layout_width="368dp"
            android:layout_height="413dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/sendMessageText" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/mainChannelName" android:id="@+id/messageListView"/>

</android.support.constraint.ConstraintLayout>