<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorSecondary"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        android:orientation="vertical"
        android:gravity="bottom" android:id="@+id/linearLayout" tools:layout_editor_absoluteY="81dp">

    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            app:srcCompat="@drawable/heroes13"
            android:contentDescription="@string/nav_header_desc"
            android:id="@+id/navHeaderAvatar" tools:srcCompat="@drawable/profiledefault" android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/navHeaderUsername"
            android:layout_marginStart="8dp" app:layout_constraintStart_toEndOf="@+id/navHeaderAvatar"
            app:layout_constraintTop_toTopOf="@+id/navHeaderAvatar"
    />

    <TextView
            android:layout_width="183dp"
            android:layout_height="18dp"
            android:id="@+id/navHeaderEmail"
            app:layout_constraintStart_toEndOf="@+id/navHeaderAvatar"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/navHeaderUsername"
    />
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginBtnNavHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:textColor="@color/colorPrimary"
            android:background="@color/colorThird" android:onClick="loginBtnNavClicked"/>
    <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp" app:srcCompat="@drawable/addchannelbutton"
            android:id="@+id/addChannelBtn"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitCenter" android:background="@android:color/transparent"
            android:contentDescription="@string/addChannel" android:onClick="addChannelButton"/>

</android.support.constraint.ConstraintLayout>
